--- a/backend/vehicle-rental/src/main/resources/application-local.properties
+++ b/backend/vehicle-rental/src/main/resources/application-local.properties
@@ -1,1 +1,9 @@
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+# DB Configuration
+spring.datasource.url=jdbc:h2:mem:localdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
