--- a/backend/vehicle-rental/pom.xml
+++ b/backend/vehicle-rental/pom.xml
@@ -64,6 +64,12 @@
 			<version>1.18.24</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.twilio.sdk/twilio -->
+		<dependency>
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio</artifactId>
+			<version>9.2.0</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
