Added environment variables for connecting to twilio SMS

--- a/backend/vehicle-rental/src/main/resources/application-local.properties
+++ b/backend/vehicle-rental/src/main/resources/application-local.properties
@@ -7,3 +7,7 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+twilio.account-sid=${TWILIO_ACCOUNT_SID}
+twilio.auth-token=${TWILIO_AUTH_TOKEN}
+twilio.from-phone=${TWILIO_PHONE_NO}
